# Element-Saving-Hexahedral-3-Refinement-Templates

./: CMakeLists.txt  LICENSE  README.md
src/: geometry.cpp  geometry.h  initializeTreeMethod0.cpp  main.cpp  removeHangingNodeMethod0.cpp  removeHangingNodeMethod1.cpp  removeHangingNodeMethod2.cpp  removeHangingNodeMethod3.cpp  removeHangingNodeMethod4.cpp  triangleMeshComputeShapeDiameterFunction.cpp
